--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "files.associations": {
         "ostream": "cpp",
-        "iosfwd": "cpp",
-        "*.tcc": "cpp"
+        "iosfwd": "cpp"
     }
 }
